# KVstore

kvstore/: README.md
kvstore/Batch_KVstore/: Makefile  cache.cpp  client.cc  graphpoints.txt  headerfiles.h  inputdata.txt  persistentstorage.h  server.cc  server_config.txt
kvstore/Interactive_KVstore/: CMakeLists.txt  Makefile  cache.cpp  client.cc  server.cc  server_config.txt
kvstore/protos/: keyvalue.proto
